# opoch-optimiser

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
benchmarks/: __init__.py  cec2020_problems.py  cec2022_problems.py  globallib_complete.py  globallib_hard.py  globallib_problems.py  globallib_runner.py  hard_polynomials.py  run_cec2020_certified.py  run_cec2022_certified.py  run_complete_benchmark.py  run_complete_certified.py  run_griewank_certified.py  run_hard_benchmark.py  run_hard_polynomials.py
benchmarks/casadi/: README.md  __init__.py  cost_comparison.py  hock_schittkowski.py  replay_verify.py  run_casadi_all.py  run_certified_benchmark.py  run_official_benchmark.py  suite_a_industrial.py  suite_b_regression.py  suite_c_minlp.py
benchmarks/casadi/runs/: benchmark_output.txt
data/bbob/: __init__.py
data/toy/: __init__.py  rastrigin.py  rosenbrock.py  sphere.py
docs/: ANCHOR_KERNEL.md  BENCHMARKS.md  CASADI_IMPLEMENTATION_PLAN.md  CASADI_IMPLEMENTATION_STATUS.md  CERTIFICATES.md  COCO_INVERSION.md  FAQ.md  GLOBALLIB_CERTIFICATION.md  GLOSSARY.md  IOH_INTEGRATION.md  MATH_ANCHOR.md  METHODOLOGY.md  PARADIGM_SHIFT.md
scripts/: analyze_results.py  make_report.py  replay_verify.py  run_ioh_bbob.py  run_suite.py
src/opoch_optimizer/: __init__.py  cli.py  contract.py  costs.py  expr_graph.py  receipts.py  tie_safe.py
src/opoch_optimizer/bounds/: __init__.py  disjunction_contractor.py  fbbt.py  interval.py  interval_newton.py  krawczyk.py  mccormick.py  separable_bounds.py
src/opoch_optimizer/casadi/: __init__.py  adapter.py  global_certificate.py  kkt_certificate.py  solver_wrapper.py
src/opoch_optimizer/coco/: __init__.py  dcma.py  ipop_dcma.py  logger_ioh.py  multistart_dcma.py  opoch_coco.py  portfolio.py  quadratic_id.py  run_coco.py
src/opoch_optimizer/core/: __init__.py  canonical_json.py  output_gate.py
tests/: __init__.py  test_circle_manifold.py  test_expr_graph.py  test_fbbt.py  test_interval.py  test_primal.py  test_solver.py
(+96 files in other folders)
